konst/tests/misc_tests/destructure_ui_tests/drop_tuple_struct_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/destructure_ui_tests/drop_tuple_struct_err.rs:8:5
  |
8 |     konst::destructure!{Tuple(foo, bar, baz) = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `__DoesNotImplDrop<Tuple>`, found `__ImplsDrop<Tuple>`
  |
  = note: expected struct `__DoesNotImplDrop<Tuple>`
             found struct `__ImplsDrop<Tuple>`
  = note: this error originates in the macro `$crate::__destructure_struct` which comes from the expansion of the macro `konst::destructure` (in Nightly builds, run with -Z macro-backtrace for more info)
